nx2/blocks/card/card.css
.nx-card {
  box-shadow: 0 1px 6px 0 rgb(0 0 0 / 12%);
  border-radius: var(--s2-corner-radius-700);
  overflow: hidden;
  background-color: #fff;
  transition: all 0.25s ease-in-out;

  &:hover {
    transform: scale(1.005);
    box-shadow: 0 2px 8px 0 rgb(0 0 0 / 16%);
  }
}

.nx-card-inner {
  display: grid;
  grid-template-rows: auto 1fr auto;
  height: 100%;
}

.nx-card-picture-container {
  position: relative;
  padding-bottom: 60%;
  background: rgb(0 0 0);
}

.nx-card picture {
  position: absolute;
  inset: 0;
  opacity: 0.85;
  transition: opacity 0.25s ease-in-out;
}

.nx-card:hover picture {
  opacity: 1;
}

.nx-card img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.nx-card-content-container {
  padding: var(--s2-spacing-400) var(--s2-spacing-400) var(--s2-spacing-200) var(--s2-spacing-400);

  :first-child {
    margin-top: 0;
    font-size: 16px;
  }

  :last-child {
    margin-bottom: 0;
  }
}

.nx-card-cta-container {
  padding: 0 var(--s2-spacing-400) var(--s2-spacing-400) var(--s2-spacing-400);
  margin: 0;
  display: flex;
  justify-content: end;
}

.nx-card-cta-container strong a {
  background-color: var(--s2-blue-800);
  border-radius: var(--s2-corner-radius-800);
  border: 2px solid var(--s2-blue-800);
  border-color: var(--s2-blue-800);
  color: #fff;
  display: inline-block;
  font-size: 15px;
  font-style: normal;
  font-weight: 700;
  line-height: 18px;
  padding: 5px 14px;
  text-decoration: none;
  outline-offset: 0;
  outline-color: var(--s2-blue-800);
  transition: outline-offset 0.2s;
}

.nx-card-cta-container strong a:focus {
  background-color: #3b63fb;
  border: 2px solid #3b63fb;
  outline-offset: 4px;
}

